[package]
name = "mnx-rs"
version = "0.0.0"
edition = "2021"
include = ["/src", "LICENSE", "README"]
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
description = "A Rust representation of the MNX music notation specification"
license = "MIT"

[dependencies]
regress = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.3"
